<resources>
    <string name="app_name">Stay Fit Hospital</string>
    <string name="stayfit">Stay Fit Hospital</string>
    <string name="creator">Coded by Kelly Ng</string>
    <string name="scan">Search</string>
    <string name="strscan">Scan</string>
    <string name="feeding">Feeding</string>
    <string name="firstname">First Name:</string>
    <string name="lastname">Last Name:</string>
    <string name="DOB">DOB:</string>
    <string name="TOB">Time Of Birth:</string>
    <string name="place">Place Of Birth:</string>
    <string name="weight">Weight(kg):</string>
    <string name="patientID">Patient ID:</string>
    <string name="StringFirstname">TAN</string>
    <string name="StringLastname">MICHAEL</string>
    <string name="StringDOB">15/09/2017</string>
    <string name="StringTOB">11:00PM</string>
    <string name="StringPlaceOfBirth">PENANG</string>
    <string name="StringWeight">2.1</string>
    <string name="StringViewRecord">View Record</string>
</resources>
